<resources>
    <string name="app_name">Burguillo Abogados App</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="nav_header_title">Burguillo Abogados</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_home">Home</string>
    <string name="menu_ubicacin">Ubicacion</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_fincas">Admin. Fincas</string>
    <string name="menu_urgencias">Urgencias</string>
    <string name="menu_contacto">Contacto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
