<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.panesoft.burguilloabogadosapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >


    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="es.panesoft.burguilloabogadosapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_ubicacin"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="es.panesoft.burguilloabogadosapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_servicios"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="es.panesoft.burguilloabogadosapp.ui.tools.ToolsFragment"
        android:label="@string/menu_fincas"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="es.panesoft.burguilloabogadosapp.ui.share.ShareFragment"
        android:label= "@string/menu_urgencias"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="es.panesoft.burguilloabogadosapp.ui.send.SendFragment"
        android:label= "@string/menu_contacto"
        tools:layout="@layout/fragment_send" />
</navigation>